scrollbar corrected + slight changes

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  overflow:visible;
 }
 
 html {
@@ -10,4 +11,24 @@ html,
 body {
   margin: 0;
   padding: 0;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $supplementaryFontColor;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $supplementaryFontColor;
 }
