--- a/src/styles/layout/_cardsWrapper.scss
+++ b/src/styles/layout/_cardsWrapper.scss
@@ -4,4 +4,5 @@ display: flex;
 flex-direction: row;
 flex-wrap: wrap;
 justify-content: center;
+min-height: 100vh;
 }
